--- a/collections.html
+++ b/collections.html
@@ -89,6 +89,7 @@
     text-align: center;
     box-shadow: 0 4px 20px rgba(0,0,0,0.3);
     transition: transform 0.3s ease;
+    overflow: hidden;
   }
   .product:hover {
     transform: translateY(-5px);
@@ -99,6 +100,10 @@
     object-fit: cover;
     border-radius: 8px;
     margin-bottom: 16px;
+    transition: transform 0.4s ease;
+  }
+  .product:hover img {
+    transform: scale(1.08);
   }
   .product h2 {
     font-size: 1.2rem;
@@ -161,37 +166,37 @@
 
     <div class="products">
       <div class="product">
-        <img src="https://via.placeholder.com/300x220" alt="Product 1">
+        <img src="gambar2.jpg" alt="Product 1">
         <h2>Product Name 1</h2>
         <p>Short description for product 1.</p>
         <button class="btn-buy">Buy Now</button>
       </div>
       <div class="product">
-        <img src="https://via.placeholder.com/300x220" alt="Product 2">
+        <img src="gambar2.jpg" alt="Product 2">
         <h2>Product Name 2</h2>
         <p>Short description for product 2.</p>
         <button class="btn-buy">Buy Now</button>
       </div>
       <div class="product">
-        <img src="https://via.placeholder.com/300x220" alt="Product 3">
+        <img src="gambar2.jpg" alt="Product 3">
         <h2>Product Name 3</h2>
         <p>Short description for product 3.</p>
         <button class="btn-buy">Buy Now</button>
       </div>
       <div class="product">
-        <img src="https://via.placeholder.com/300x220" alt="Product 4">
+        <img src="gambar2.jpg" alt="Product 4">
         <h2>Product Name 4</h2>
         <p>Short description for product 4.</p>
         <button class="btn-buy">Buy Now</button>
       </div>
       <div class="product">
-        <img src="https://via.placeholder.com/300x220" alt="Product 5">
+        <img src="gambar2.jpg" alt="Product 5">
         <h2>Product Name 5</h2>
         <p>Short description for product 5.</p>
         <button class="btn-buy">Buy Now</button>
       </div>
       <div class="product">
-        <img src="https://via.placeholder.com/300x220" alt="Product 6">
+        <img src="gambar2.jpg" alt="Product 6">
         <h2>Product Name 6</h2>
         <p>Short description for product 6.</p>
         <button class="btn-buy">Buy Now</button>
