--- a/index.html
+++ b/index.html
@@ -123,6 +123,68 @@
     font-size: 0.85rem;
     letter-spacing: 0.05em;
   }
+
+  /* 📱 Responsive untuk tablet */
+  @media (max-width: 768px) {
+    .container {
+      padding: 40px 16px 80px;
+    }
+    .logo {
+      font-size: 36px;
+      letter-spacing: 0.2em;
+      margin-bottom: 40px;
+    }
+    h1 {
+      font-size: 2rem;
+      margin-bottom: 20px;
+    }
+    p.subtitle {
+      font-size: 1rem;
+      margin-bottom: 40px;
+    }
+    nav {
+      flex-wrap: wrap;
+      gap: 20px;
+      margin-bottom: 60px;
+    }
+    nav a {
+      font-size: 0.85rem;
+      padding: 6px 12px;
+    }
+    .btn-primary {
+      padding: 12px 36px;
+      font-size: 1rem;
+    }
+  }
+
+  /* 📱 Responsive untuk HP kecil */
+  @media (max-width: 480px) {
+    .container {
+      padding: 30px 12px 60px;
+    }
+    .logo {
+      font-size: 28px;
+      letter-spacing: 0.15em;
+    }
+    h1 {
+      font-size: 1.6rem;
+    }
+    p.subtitle {
+      font-size: 0.9rem;
+      letter-spacing: 0.05em;
+    }
+    nav {
+      gap: 12px;
+    }
+    nav a {
+      font-size: 0.8rem;
+      padding: 5px 10px;
+    }
+    .btn-primary {
+      padding: 10px 28px;
+      font-size: 0.9rem;
+    }
+  }
 </style>
 </head>
 <body>
